choose-mirror (2.25) UNRELEASED; urgency=low

  * Remove Martin Sjogren and Matt Kraai as Uploaders with many thanks for
    their past contributions.

 -- Frans Pop <fjp@debian.org>  Tue, 08 Apr 2008 13:24:26 +0200

choose-mirror (2.24) unstable; urgency=low

  * Patch by Matthias Klose stolen from Ubuntu (closes: #468623):
    - iso3166tab.py: Include ErrorPrinter and DefaultHandler from obsolete
      saxutils.py
    - drop build dependency on python-xml
  * Remove PREFERRED_DISTRIBUTION; has been replaced by /etc/default-release.
  * Improved version of the script used to sort the mirror country list.

  [ Updated translations ]
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Esko Arajärvi
  * Marathi (mr.po)
  * Dutch (nl.po) by Frans Pop
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Portuguese (pt.po) by Miguel Figueiredo
  * Slovak (sk.po) by Ivan Masár

 -- Frans Pop <fjp@debian.org>  Sun, 06 Apr 2008 11:48:18 +0200

choose-mirror (2.23) unstable; urgency=low

  * Rebuilt using updated Mirrors.masterlist which now includes official
    armel mirrors.

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Feb 2008 16:59:49 -0500

choose-mirror (2.22) unstable; urgency=low

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * French (fr.po) by Christian Perrier
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Korean (ko.po) by Changwoo Ryu
  * Latvian (lv.po) by Viesturs Zarins
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Turkish (tr.po) by Recai Oktaş
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 07:49:33 -0200

choose-mirror (2.21) unstable; urgency=low

  * If built from a clean VCS checkout, Mirrors.masterlist was not present
    when the source package was built, and so was not included in the source
    package, and so has to be individually downloaded by each build daemon.